# hwhobby

./: .gitignore  CMakeLists.txt  Makefile.example  README.md  reference.md
cmake/: options.cmake
cmake/config/: config_aarch64-linux.cmake  config_armv6l-linux.cmake  config_cortex-m3-none.cmake
cmake/option/: option_aarch64-linux.cmake  option_armv6l-linux.cmake  option_cortex-m3-none.cmake  option_linux-common.cmake
cross/: build-rootfs.sh  read.md
modules/: CMakeLists.txt  README.md
modules/hwabc/: CMakeLists.txt
modules/hwabc/include/hwabc/: standard.h
modules/hwboard/: CMakeLists.txt
modules/hwboard/include/cdgpio/: cdgpio_interface.h
modules/hwboard/include/gpio/: gpio_interface.h
modules/hwboard/rpi/: CMakeLists.txt
modules/hwboard/rpi/src/: gpio_bcm2835.c
modules/hwboard/rpicd/: CMakeLists.txt
modules/hwboard/rpicd/src/: gpio_cd.c  rpicd_gpiod.cpp
modules/hwboard/stm32f103c8t6/: CMakeLists.txt
modules/hwboard/stm32f103c8t6/include/: gpio_stm32f103c8t6.h
modules/hwboard/stm32f103c8t6/libstm/: CMakeLists.txt  README.md
modules/hwboard/stm32f103c8t6/libstm/include/: stm32f10x_lib.h  stm32f10x_type.h
modules/hwboard/stm32f103c8t6/libstm/lib/: STM32_SEC_FLASH.ld
modules/hwboard/stm32f103c8t6/src/: gpio_stm32f103c8t6.c  stm32f103c8t6.c  stm32f103c8t6.h
modules/hwchip/: CMakeLists.txt
modules/hwchip/hd44780/: CMakeLists.txt
modules/hwchip/hd44780/include/hwchip/: hd44780.h
modules/hwchip/hd44780/src/: hd44780.c
modules/hwchip/pcf8574/: CMakeLists.txt
modules/hwchip/pcf8574/include/hwchip/: pcf8574.h
modules/hwchip/pcf8574/src/: pcf8574.c
modules/hwchip/tm1637/: CMakeLists.txt
modules/hwchip/tm1637/include/hwchip/: tm1637.h
modules/hwchip/tm1637/src/: tm1637.c
modules/hwmodule/: CMakeLists.txt
modules/hwmodule/encoder/: CMakeLists.txt
modules/hwmodule/encoder/include/hwmodule/: encoder.h
modules/hwmodule/encoder/src/: encoder_rot_inc.c
modules/hwmodule/hc-sr04/: CMakeLists.txt
modules/hwmodule/hc-sr04/include/hwmodule/: hc-sr04.h
modules/hwmodule/hc-sr04/src/: hc-sr04.c
modules/hwmodule/i2clcd/: CMakeLists.txt
modules/hwmodule/i2clcd/include/hwmodule/: i2clcd.h
modules/hwmodule/i2clcd/src/: i2clcd.c
modules/hwmodule/lcd1602/: CMakeLists.txt
modules/hwmodule/lcd1602/include/hwmodule/: lcd1602.h
modules/hwmodule/lcd1602/src/: lcd1602.c
modules/hwmodule/led4x7seg/: CMakeLists.txt
modules/hwmodule/led4x7seg/include/hwmodule/: led4x7seg.h
modules/hwmodule/led4x7seg/src/: led4x7seg.c
modules/lib/: CMakeLists.txt
modules/lib/libabc/: CMakeLists.txt
modules/lib/libabc/include/dlog/: dlog.h
modules/lib/libmuv/: CMakeLists.txt
modules/lib/libmuv/include/muv/: muv.h
modules/lib/libmuv/src/: muv.cpp
modules/muvmodule/: CMakeLists.txt
modules/muvmodule/muvport/: CMakeLists.txt
modules/muvmodule/muvport/include/muv/: muvport.h
modules/muvmodule/muvport/src/: muvport.cpp
modules/tools/: CMakeLists.txt
modules/tools/rpi64_encoder/: CMakeLists.txt  README.md
modules/tools/rpi64_encoder/src/: encoder.cpp
modules/tools/rpi64_hello/: CMakeLists.txt
modules/tools/rpi_clock/: CMakeLists.txt  README.md
modules/tools/rpi_clock/src/: led47clock.c
modules/tools/rpi_counter/: CMakeLists.txt  README.md
modules/tools/rpi_counter/src/: led47counter.c
modules/tools/rpi_lcd1602/: CMakeLists.txt
modules/tools/rpi_lcd1602/src/: lcd1602.cpp
modules/tools/rpi_ultrasonic/: CMakeLists.txt
modules/tools/rpi_ultrasonic/src/: ultrasonic_distance.cpp
modules/tools/stm_blinker/: CMakeLists.txt  README.md
modules/tools/stm_blinker/src/: main.c
modules/tools/stm_blinker2/: CMakeLists.txt  README.md
modules/tools/stm_blinker2/src/: blinker.cpp
modules/tools/stm_counter/: CMakeLists.txt  README.md
modules/tools/stm_counter/src/: led47counter.cpp
modules/tools/stm_lcd1602/: CMakeLists.txt
modules/tools/stm_lcd1602/src/: lcd1602.c
modules/verify/: CMakeLists.txt
modules/verify/rpi64_hello/: CMakeLists.txt
modules/verify/rpi64_hello/src/: hello.cpp
modules/verify/rpi64_libgpiod/: CMakeLists.txt
modules/verify/rpi64_libgpiod/src/: hellogpiod.cpp
modules/verify/rpicd_encoder/: CMakeLists.txt
modules/verify/rpicd_encoder/src/: rpicd_encoder.cpp
modules/verify/rpicd_hellogpio/: CMakeLists.txt
modules/verify/rpicd_hellogpio/src/: hellogpio.cpp
modules/verify/rpicd_lcd1602/: CMakeLists.txt
modules/verify/rpicd_lcd1602/src/: lcd1602.cpp
modules/verify/rpicd_runmuv/: CMakeLists.txt
modules/verify/rpicd_runmuv/src/: rpicd_runmuv.cpp
modules/verify/rpicd_runmuvport/: CMakeLists.txt
modules/verify/rpicd_runmuvport/src/: rpicd_runmuvport.cpp
